# darwin-protocol

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
crates/darwin-asset-faucets/: Cargo.toml
crates/darwin-asset-faucets/src/: lib.rs
crates/darwin-basket-faucet/: Cargo.toml
crates/darwin-basket-faucet/asm/: faucet.masm
crates/darwin-basket-faucet/src/: lib.rs
crates/darwin-controller-pkg/: Cargo.toml  README.md  rust-toolchain.toml
crates/darwin-controller-pkg/src/: lib.rs
crates/darwin-notes/: Cargo.toml
crates/darwin-notes/asm/: atomic_deposit_note.masm  atomic_deposit_note_v2.masm  atomic_deposit_note_v3.masm  atomic_redeem_note.masm  deposit_note.masm  drip_note.masm  rebalance_trigger_note.masm  redeem_note.masm
crates/darwin-notes/src/: lib.rs
crates/darwin-protocol-account/: Cargo.toml  build.rs
crates/darwin-protocol-account/asm/: controller.masm  controller_v0_19.masm
crates/darwin-protocol-account/asm/lib/: drift.masm  fees.masm  flow.masm  mint.masm  nav.masm  redeem.masm
crates/darwin-protocol-account/src/: component.rs  lib.rs  storage.rs
crates/darwin-protocol-account/tests/: atomic_deposit_note.rs  drift_basket_property.rs  drift_masm.rs  fees_masm.rs  flow_masm.rs  math_masm.rs  mint_masm.rs  nav_masm.rs  pragma_live_smoke.rs  protocol_0_14_path.rs  redeem_masm.rs  round_trip_masm.rs  v019_stdlib_path.rs
crates/darwin-protocol-account/tests/common/: mod.rs
