[workspace]
resolver = "2"
members = [
    "crates/darwin-protocol-account",
    "crates/darwin-basket-faucet",
    "crates/darwin-asset-faucets",
    "crates/darwin-notes",
]
exclude = [
    # Compiled by cargo-miden into a .masp package, not part of the
    # workspace (different toolchain + crate-type = ["cdylib"]).
    "crates/darwin-controller-pkg",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/darwin-miden/darwin-protocol"

[workspace.dependencies]
darwin-baskets = { git = "ssh://git@github.com/darwin-miden/darwin-baskets.git" }

# Miden dependencies. Versions verified against crates.io on 2026-05-14.
# Enabled now that the local Miden toolchain (midenup + stable) is in place.
miden-assembly   = "0.23"
miden-core-lib   = "0.23"
miden-vm         = { version = "0.23", features = ["std"] }
miden-base       = "0.12"
miden-objects    = "0.12"
miden-lib        = "0.12"
miden-client     = "0.14"
miden-tx         = "0.14"

# miden-agglayer is not on crates.io yet (tagged v0.14-alpha in the
# `next` branch of 0xMiden/protocol). Enable via git when we wire the
# B2AGG / CLAIM consumption path against the real bridge.
# miden-agglayer   = { git = "https://github.com/0xMiden/protocol", branch = "next" }

serde     = { version = "1", features = ["derive"] }
thiserror = "1"
anyhow    = "1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
