[package]
name = "darwin-asset-faucets"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Custom Darwin testnet asset faucets (dETH, dWBTC, dUSDT, dDAI) used by the M1 baskets."

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
