[package]
name = "darwin-protocol-account"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Darwin Protocol Account: shared private account per basket, RegularAccountImmutableCode with Private storage."

[dependencies]
darwin-baskets    = { workspace = true }
darwin-notes      = { path = "../darwin-notes" }
darwin-oracle-adapter = { path = "../../../darwin-oracle-adapter", features = ["pragma-live"], optional = true }
miden-assembly    = { workspace = true }
miden-core-lib    = { workspace = true }
miden-base        = { workspace = true }
miden-client      = { workspace = true, features = ["tonic"] }
miden-client-sqlite-store = "0.14"
miden-objects     = { workspace = true }
miden-mast-package = "0.22"
miden-protocol    = { workspace = true }
rand              = "0.8"
serde = { workspace = true }
thiserror = { workspace = true }
tokio             = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }

[build-dependencies]
miden-assembly = { workspace = true }
miden-core-lib = { workspace = true }

[features]
default = []
pragma-live = ["dep:darwin-oracle-adapter", "dep:anyhow"]

[dependencies.anyhow]
version = "1"
optional = true

[[bin]]
name = "oracle_query_real"
path = "src/bin/oracle_query_real.rs"
required-features = ["pragma-live"]

[dev-dependencies]
miden-vm = { workspace = true }
miden-stdlib = "0.19"
darwin-notes = { path = "../darwin-notes" }
