[package]
name = "darwin-protocol-account"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Darwin Protocol Account: shared private account per basket, RegularAccountImmutableCode with Private storage."

[dependencies]
darwin-baskets    = { workspace = true }
darwin-notes      = { path = "../darwin-notes" }
darwin-oracle-adapter = { path = "../../../darwin-oracle-adapter", features = ["pragma-live"], optional = true }
miden-assembly    = { workspace = true }
miden-core-lib    = { workspace = true }
miden-base        = { workspace = true }
miden-client      = { workspace = true, features = ["tonic"] }
miden-client-sqlite-store = "0.15"
miden-objects     = { workspace = true }
miden-mast-package = "0.23"
miden-protocol    = { workspace = true }
rand              = "0.8"
serde = { workspace = true }
thiserror = { workspace = true }
tokio             = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }

[build-dependencies]
miden-assembly = { workspace = true }
miden-core-lib = { workspace = true }

[features]
default = []
pragma-live = ["dep:darwin-oracle-adapter", "dep:anyhow"]
# v0.15 migration WIP. These binaries hit v0.15 API shape changes
# (NoteMetadata::new arity, Account::account_type getter rename,
# AccountType kind enum gone) that need hands-on porting. Gated so
# the workspace builds clean until we get to them.
v015-port-wip = []

[dependencies.anyhow]
version = "1"
optional = true

[[bin]]
name = "oracle_query_real"
path = "src/bin/oracle_query_real.rs"
required-features = ["pragma-live"]

# These two binaries pull `darwin_oracle_adapter::pragma_live` + `anyhow`,
# both of which only resolve under the `pragma-live` feature. Without
# the explicit declaration cargo auto-discovers them at default
# features and the fresh-clone build fails with E0432/E0433. The
# pragma_prices_json binary is also what the frontend README tells
# reviewers to build for live NAV.
[[bin]]
name = "pragma_prices_json"
path = "src/bin/pragma_prices_json.rs"
required-features = ["pragma-live"]

[[bin]]
name = "nav_pro_rata"
path = "src/bin/nav_pro_rata.rs"
required-features = ["pragma-live"]

[dev-dependencies]
miden-vm = { workspace = true }
miden-stdlib = "0.19"
darwin-notes = { path = "../darwin-notes" }

# v0.15 migration WIP: these binaries hit v0.15 API shape changes
# (NoteMetadata::new arity, Account::account_type getter rename,
# AccountType kind enum gone) that need hands-on porting. Gated behind
# a feature that's never enabled by any consumer so the workspace
# builds clean until we get to them.

[[bin]]
name              = "darwin_doctor"
path              = "src/bin/darwin_doctor.rs"
required-features = ["v015-port-wip"]

[[bin]]
name              = "deploy_atomic_flow_a"
path              = "src/bin/deploy_atomic_flow_a.rs"
required-features = ["v015-port-wip"]

[[bin]]
name              = "deploy_m1"
path              = "src/bin/deploy_m1.rs"
required-features = ["v015-port-wip"]

[[bin]]
name              = "deploy_v5"
path              = "src/bin/deploy_v5.rs"
required-features = ["v015-port-wip"]

[[bin]]
name              = "deploy_v6"
path              = "src/bin/deploy_v6.rs"
required-features = ["v015-port-wip"]

[[bin]]
name              = "deploy_v7"
path              = "src/bin/deploy_v7.rs"
required-features = ["v015-port-wip"]

[[bin]]
name              = "flow_a_bench"
path              = "src/bin/flow_a_bench.rs"
required-features = ["v015-port-wip"]

[[bin]]
name              = "flow_a_full"
path              = "src/bin/flow_a_full.rs"
required-features = ["v015-port-wip"]

[[bin]]
name              = "flow_b_demo"
path              = "src/bin/flow_b_demo.rs"
required-features = ["v015-port-wip"]

[[bin]]
name              = "flow_c_full"
path              = "src/bin/flow_c_full.rs"
required-features = ["v015-port-wip"]
