[package]
name = "darwin-protocol-account"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Darwin Protocol Account: shared private account per basket, RegularAccountImmutableCode with Private storage."

[dependencies]
darwin-baskets    = { workspace = true }
darwin-notes      = { path = "../darwin-notes" }
darwin-oracle-adapter = { path = "../../../darwin-oracle-adapter", features = ["pragma-live"], optional = true }
miden-assembly    = { workspace = true }
miden-core-lib    = { workspace = true }
miden-base        = { workspace = true }
miden-client      = { workspace = true, features = ["tonic"] }
miden-client-sqlite-store = "0.15"
miden-objects     = { workspace = true }
miden-mast-package = "0.23"
miden-protocol    = { workspace = true }
miden-standards   = "0.15"
rand              = "0.8"
base64            = "0.22"
serde_json        = "1"
serde = { workspace = true }
thiserror = { workspace = true }
tokio             = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }

[build-dependencies]
miden-assembly = { workspace = true }
miden-core-lib = { workspace = true }

[features]
default = []
pragma-live = ["dep:darwin-oracle-adapter", "dep:anyhow"]
# v0.15 migration: previously used to gate broken bins. All bins now
# port cleanly so the feature is a no-op — kept as a stable knob for
# scripts that already reference it.
v015-port-wip = []

[dependencies.anyhow]
version = "1"
optional = true

[[bin]]
name = "oracle_query_real"
path = "src/bin/oracle_query_real.rs"
required-features = ["pragma-live"]

# These two binaries pull `darwin_oracle_adapter::pragma_live` + `anyhow`,
# both of which only resolve under the `pragma-live` feature. Without
# the explicit declaration cargo auto-discovers them at default
# features and the fresh-clone build fails with E0432/E0433. The
# pragma_prices_json binary is also what the frontend README tells
# reviewers to build for live NAV.
[[bin]]
name = "pragma_prices_json"
path = "src/bin/pragma_prices_json.rs"
required-features = ["pragma-live"]

[[bin]]
name = "nav_pro_rata"
path = "src/bin/nav_pro_rata.rs"
required-features = ["pragma-live"]

[dev-dependencies]
miden-vm = { workspace = true }
miden-stdlib = "0.19"
darwin-notes = { path = "../darwin-notes" }
